{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 33,
  "lineage": "3b39f50b-dfec-4c5b-b8c2-a2c5cc7cd499",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-05-05T10:32:47.766-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/velvety-byway-385815/global/firewalls/kopicloud-fw-allow-http",
            "log_config": [],
            "name": "kopicloud-fw-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/velvety-byway-385815/global/networks/kopicloud-vpc",
            "priority": 1000,
            "project": "velvety-byway-385815",
            "self_link": "https://www.googleapis.com/compute/v1/projects/velvety-byway-385815/global/firewalls/kopicloud-fw-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-05-05T10:32:47.740-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/velvety-byway-385815/global/firewalls/kopicloud-fw-allow-ssh",
            "log_config": [],
            "name": "kopicloud-fw-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/velvety-byway-385815/global/networks/kopicloud-vpc",
            "priority": 1000,
            "project": "velvety-byway-385815",
            "self_link": "https://www.googleapis.com/compute/v1/projects/velvety-byway-385815/global/firewalls/kopicloud-fw-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20230302",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/velvety-byway-385815/zones/us-central1-c/disks/kopicloud-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "hostname": "kopicloud-vm.kopicloud.com",
            "id": "projects/velvety-byway-385815/zones/us-central1-c/instances/kopicloud-vm",
            "instance_id": "2116244782035041988",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "lunIh6qI-SQ=",
            "metadata_startup_script": "sudo mkdir 4; \nsudo apt-get install -y apache2;\nsudo systemctl start apache2;\nsudo systemctl enable apache2;\n",
            "name": "kopicloud-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.202.120.207",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/velvety-byway-385815/global/networks/kopicloud-vpc",
                "network_ip": "10.10.10.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/velvety-byway-385815/regions/us-central1/subnetworks/kopicloud-subnet",
                "subnetwork_project": "velvety-byway-385815"
              }
            ],
            "project": "velvety-byway-385815",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/velvety-byway-385815/zones/us-central1-c/instances/kopicloud-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http",
              "ssh"
            ],
            "tags_fingerprint": "7XLBdwIeS7E=",
            "zone": "us-central1-c"
          },
          "dependencies": [
            "data.template_file.linux-metadata",
            "google_compute_network.vpc",
            "google_compute_subnetwork.network_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/velvety-byway-385815/global/networks/kopicloud-vpc",
            "mtu": 0,
            "name": "kopicloud-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "velvety-byway-385815",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/velvety-byway-385815/global/networks/kopicloud-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "network_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-05-05T10:32:47.904-07:00",
            "gateway_address": "10.10.10.1",
            "id": "projects/velvety-byway-385815/regions/us-central1/subnetworks/kopicloud-subnet",
            "ip_cidr_range": "10.10.10.0/24",
            "name": "kopicloud-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/velvety-byway-385815/global/networks/kopicloud-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "velvety-byway-385815",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/velvety-byway-385815/regions/us-central1/subnetworks/kopicloud-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}